# reiforcementLapan

./: .gitignore  pyproject.toml  requirements.txt
chapter_2/: 01_anatomy.py  02_gym_beginning.py  03_gym_wrappers.py
chapter_3/: 00_pytorch_basics.py
neural_networks/: first_classifitor.ipynb  first_nn.ipynb
