[tool.poetry]
name = "reinforcementlapan"
version = "0.1.0"
description = ""
authors = ["Ondrew <work.ondrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.26.2"
numpy = "1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

